--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
- <meta name="google-adsense-account" content="ca-pub-6718965890375822">
+ <meta name="monetag" content="5285d0f9d1f77e4fb81ffcc581abade0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أخبار العرب - التحديث الجديد</title>
